--- a/OpenXava/projetbmo/data/projetbmo-db.properties
+++ b/OpenXava/projetbmo/data/projetbmo-db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Thu Mar 21 00:05:06 CET 2024
+#Thu Mar 21 07:20:52 CET 2024
 version=2.7.2
-modified=yes
-tx_timestamp=1
+modified=no
+tx_timestamp=41
