--- a/OpenXava/projetbmo/data/projetbmo-db.properties
+++ b/OpenXava/projetbmo/data/projetbmo-db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Thu Mar 21 07:20:52 CET 2024
+#Thu Mar 21 07:21:16 CET 2024
 version=2.7.2
-modified=no
+modified=yes
 tx_timestamp=41
